--- a/content/t100.md
+++ b/content/t100.md
@@ -5,4 +5,4 @@ Tärningsspelet 100 är ett enkelt och roligt tärningsspel. Spelet spelas med e
 
 I varje omgång kastar en spelare tärningarna tills hon väljer att stanna och spara poängen, eller tills det dyker upp en 1:a och hon förlorar alla poäng som samlats in i rundan. Rundan går då över till nästa spelare. Det gäller att komma först till 100.
 
-* [Starta spelet](t100/play)
+* [Play](t100/play)
